verification by email has been added
